Some CSS change, hover, flyin

--- a/views/campground/index.ejs
+++ b/views/campground/index.ejs
@@ -19,7 +19,7 @@
       <div class="row text-center" style="display:flex; flex-wrap: wrap;">
         <% pcampgrounds.forEach(function(campground){ %>
           <div class="col-md-3 col-sm-6">
-              <div class="thumbnail">
+              <div id="thumbnail" class="thumbnail register">
                 <img src="<%= campground.Image %>">
                 <div class="caption">
                     <h4><%= campground.Name %></h4>
