--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -38,3 +38,10 @@ body {
     height: 400px;
     width: 100%;
 }
+
+#thumbnail img:hover {
+    -moz-transform: scale(1.1);
+    -webkit-transform: scale(1.1);
+    -ms-transform: scale(1.1);
+    transform: scale(1.1);
+}
