--- a/views/campground/edit.ejs
+++ b/views/campground/edit.ejs
@@ -21,7 +21,7 @@
                 </div>
                 <div class="form-group">
                     <label for="Location">Location</label>
-                    <input class="form-control" type="text" name="Location" id="Location" value="<%= campground.Location %>">
+                    <input class="form-control" type="text" name="updCampground[Location]" id="Location" value="<%= campground.Location %>">
                 </div>
                 <div class="form-group">
                     <button class="btn btn-lg btn-default btn-block">Submit!</button>
