--- a/views/campground/show.ejs
+++ b/views/campground/show.ejs
@@ -31,7 +31,7 @@
                     <p>
                         <em>Submitted by <%= campground.Author.username %>, <%= moment(campground.CreatedAt).fromNow() %></em>
                     </p>
-                    <% if (vCurrentUser && campground.Author.id.equals(vCurrentUser._id)) { %>
+                    <% if (vCurrentUser && campground.Author.id.equals(vCurrentUser._id) || vCurrentUser && vCurrentUser.vIsAdmin) { %>
                         <a class="btn btn-xs btn-warning" href="/campgrounds/<%= campground._id %>/edit">Edit</a>
                         <form id="delete-form" action="/campgrounds/<%= campground._id %>?_method=DELETE" method="POST">
                             <button class="btn btn-xs btn-danger">Delete</button>
@@ -52,7 +52,7 @@
                                 <%= moment(comment.CreatedAt).fromNow() %>
                             </span>
                             <p><%=comment.Text%></p>
-                            <% if (vCurrentUser && comment.Author.id.equals(vCurrentUser._id)) { %>
+                            <% if (vCurrentUser && comment.Author.id.equals(vCurrentUser._id) || vCurrentUser && vCurrentUser.vIsAdmin) { %>
                                 <a class="btn btn-xs btn-warning" href="/campgrounds/<%= campground._id %>/comments/<%= comment._id %>/edit">Edit</a>
                                 <form class="delete-form" action="/campgrounds/<%= campground._id %>/comments/<%= comment._id %>?_method=DELETE" method="POST">
                                     <button class="btn btn-xs btn-danger">Delete</button>
