--- a/views/register.ejs
+++ b/views/register.ejs
@@ -9,6 +9,9 @@
                 <input type="text" placeholder="username" name="username">
             </div>
             <div class="form-group register">
+                <input type="text" placeholder="Admin Code" name="admincode">
+            </div>
+            <div class="form-group register">
                 <input type="password" placeholder="password" name="password">
             </div>
             <div class="form-group register">
