--- a/views/campground/edit.ejs
+++ b/views/campground/edit.ejs
@@ -1,6 +1,6 @@
 <% include ../partials/header %>
-<% console.log("Edit") %>
-<% console.log(campground) %>
+<!-- <% console.log("Edit") %>
+<% console.log(campground) %> -->
 <!-- <div class="container"> -->
     <div class="row">
         <h1 style="text-align: center">Edit <%= campground.Name %></h1>
