--- a/views/login.ejs
+++ b/views/login.ejs
@@ -14,6 +14,9 @@
                 <button class="btn btn-lg btn-primary btn-block">Login</button>
             </div>
         </form>
+        <a href="/forget" class="forgot-password-link">Forgot password?</a>
+        <p class="login-card-footer-text">Don't have an account? <a href="/register" class="text-reset">Register here</a></p>
+
         <a href="/campgrounds">Go Back</a>
     </div>
 </div>
