--- a/views/register.ejs
+++ b/views/register.ejs
@@ -3,22 +3,80 @@
     <div class="register">
         <h1 style="text-align: center">Sign Up</h1>
     </div>
-    <div style="width: 30%; margin: 25px auto;">
-        <form action="/register" method="POST">
-            <div class="form-group register">
-                <input type="text" placeholder="username" name="username">
-            </div>
-            <div class="form-group register">
-                <input type="text" placeholder="Admin Code" name="admincode">
-            </div>
-            <div class="form-group register">
-                <input type="password" placeholder="password" name="password">
-            </div>
-            <div class="form-group register">
-                <button class="btn btn-lg btn-primary btn-block">Sign Up!</button>
+        <form class="form-horizontal" action="/register" method="POST">
+                <div class="form-group">
+                    <label class="col-sm-2 col-sm-offset-2 control-label" for="username">Username : </label>
+                    <div class="col-sm-6">
+                        <input type="text" class="form-control" id="username" placeholder="username" name="username">
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label class="col-sm-2 col-sm-offset-2 control-label" for="admincode">Admin code : </label>
+                    <div class="col-sm-6">
+                        <input type="text" class="form-control" id="admincode" placeholder="Admin Code" name="admincode">
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label class="col-sm-2 col-sm-offset-2 control-label" for="firstname">First Name : </label>
+                    <div class="col-sm-6">
+                        <input type="text" class="form-control" id="firstname" placeholder="First Name" name="firstname">
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label class="col-sm-2 col-sm-offset-2 control-label" for="lastname">Last Name : </label>
+                    <div class="col-sm-6">
+                        <input type="text" class="form-control" id="lastname" placeholder="Last Name" name="lastname">
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label class="col-sm-2 col-sm-offset-2 control-label" for="datebirth">Date of Birth : </label>
+                    <div class="col-sm-6">
+                        <input type="date" class="form-control" id="datebirth" placeholder="Date of Birth" name="datebirth">
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label class="col-sm-2 col-sm-offset-2 control-label" for="facebook">Facebook Link : </label>
+                    <div class="col-sm-6">
+                        <input type="text" class="form-control" id="facebook" placeholder="Facebook link" name="facebook">
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label class="col-sm-2 col-sm-offset-2 control-label" for="twitter">Twitter Link : </label>
+                    <div class="col-sm-6">
+                        <input type="text" class="form-control" id="twitter" placeholder="Twitter Link " name="twitter">
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label class="col-sm-2 col-sm-offset-2 control-label" for="avatar">Avatar : </label>
+                    <div class="col-sm-6">
+                        <input type="text" class="form-control" id="avatar" placeholder="Avatar Link" name="avatar">
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label class="col-sm-2 col-sm-offset-2 control-label" for="email">Email address : </label>
+                    <div class="col-sm-6">
+                        <input type="text" class="form-control" id="email" placeholder="Email address" name="email">
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label class="col-sm-2 col-sm-offset-2 control-label" for="password">Password : </label>
+                    <div class="col-sm-6">
+                        <input type="password" class="form-control" id="password" placeholder="password" name="password">
+                    </div>
+                </div>
+            <div class="formgroup">
+                <div class="col-sm-4 col-sm-offset-5"> 
+                    <button class="btn btn-lg btn-primary btn-block">Sign Up!</button>
+                </div>
             </div>
         </form>
-        <a href="/campgrounds">Go Back</a>
-    </div>
+        <div class="formgroup">
+            <div class="col-sm-4 col-sm-offset-5"> 
+                <a href="/campgrounds"><button class="btn btn-lg btn-info btn-block"><i class="fas fa-chevron-left"> Back to Campgrounds</i></button></a>
+            </div>
+        </div>
+    <!-- </div> -->
 </div>
+<br>
+<br>
 <% include ./partials/footer %>
