--- a/views/register.ejs
+++ b/views/register.ejs
@@ -7,7 +7,7 @@
                 <div class="form-group">
                     <label class="col-sm-2 col-sm-offset-2 control-label" for="username">Username : </label>
                     <div class="col-sm-6">
-                        <input type="text" class="form-control" id="username" placeholder="username" name="username">
+                        <input type="text" class="form-control" id="username" placeholder="username" name="username" autofocus>
                     </div>
                 </div>
                 <div class="form-group">
