--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -45,3 +45,7 @@ body {
     -ms-transform: scale(1.1);
     transform: scale(1.1);
 }
+
+.form-horizontal .control-label{
+    text-align:left; 
+ }
