--- a/views/campground/new.ejs
+++ b/views/campground/new.ejs
@@ -1,32 +1,45 @@
 <% include ../partials/header %>
-<!-- <div class="container"> -->
-    <div class="row">
-        <h1 style="text-align: center">Create a new campground</h1>
-        <br>
-        <div style="width: 30%; margin: 50px auto">
-            <form action="/campgrounds" method="POST">
-                <div class="form-group">
-                    <input class="form-control" type="text" name="vName" placeholder="Naam">
+
+    <h1 style="text-align: center">Create a new campground</h1>
+    <br>
+    <div style="width: 60%; margin: 50px auto">
+        <form action="/campgrounds" class="form-horizontal" method="POST">
+            <div class="form-group">
+                <label class="col-sm-3 col-sm-offset-1 control-label: left" for="naam">Campground : </label>
+                <div class="col-sm-6">
+                    <input id="naam" class="form-control" type="text" name="vName" placeholder="Naam">
                 </div>
-                <div class="form-group">
-                    <input class="form-control" type="text" name="vUrl" placeholder="Url">
+            </div>
+            <div class="form-group">
+                <label class="col-sm-3 col-sm-offset-1 control-label: left " for="url">Url : </label>
+                <div class="col-sm-6">
+                    <input id="url"  class="form-control" type="text" name="vUrl" placeholder="Url">
                 </div>
-                <div class="form-group">
-                    <input class="form-control" type="text" name="Description" placeholder="description">
+            </div>
+            <div class="form-group">
+                <label class="col-sm-3 col-sm-offset-1 control-label" for="description">Description : </label>
+                <div class="col-sm-6">
+                    <input id="description" class="form-control" type="text" name="Description" placeholder="description">
                 </div>
-                <div class="form-group">
-                    <input class="form-control" type="number" name="Price" placeholder="price" min="0.01" step="0.01">
+            </div>
+            <div class="form-group">
+                <label class="col-sm-3 col-sm-offset-1 control-label" for="prijs">Price : </label>
+                <div class="col-sm-6">
+                    <input id="prijs" class="form-control" type="number" name="Price" placeholder="price" min="0.01" step="0.01">
                 </div>
-                <div class="form-group">
-                    <label for="Location">Location</label>
-                    <input class="form-control" type="text" name="Location" id="Location" placeholder="National Park">
+            </div>
+            <div class="form-group">
+                <label class="col-sm-3 col-sm-offset-1 control-label" for="location">Location : </label>
+                <div class="col-sm-6">
+                    <input id="location" class="form-control" type="text" name="Location" id="Location" placeholder="National Park">
                 </div>
-                <div class="form-group">
-                    <button class="btn btn-lg btn-default btn-block">Submit!</button>
-                </div>
-                <a href="/campgrounds">Go Back</a>
-            </form>
-        </div>        
-    </div>
-<!-- </div> -->
+            </div>
+            <div class="form-group">
+                <button class="btn btn-lg btn-default btn-block">Submit!</button>
+            </div>
+            <a href="/campgrounds">Go Back</a>
+        </form>
+    </div>        
+
+
 <% include ../partials/footer %>
