--- a/views/login.ejs
+++ b/views/login.ejs
@@ -2,22 +2,29 @@
 
 <div class="row">
     <h1 style="text-align: center">Login</h1>
-    <div style="width: 30%; margin: 25px auto;">
-        <form action="/login" method="post">
+    <div style="width: 50%; margin: 10px auto;">
+        <form action="/login" class="form-horizontal" method="post">
             <div class="form-group">
-                <input class="form-control" type="text" name="username" placeholder="username">
+                <label class="col-sm-3 col-sm-offset-1 control-label" for="username">Username : </label>
+                <div class="col-sm-6">
+                    <input id="username"class="form-control" type="text" name="username" placeholder="username" autofocus>
+                </div>
             </div>
             <div class="form-group">
-                <input class="form-control" type="password" name="password" placeholder="password">
+                <label class="col-sm-3 col-sm-offset-1 control-label" for="password">Password : </label>
+                <div class="col-sm-6">
+                    <input id="password" class="form-control" type="password" name="password" placeholder="password">
+                </div>
             </div>
             <div class="form-group">
-                <button class="btn btn-lg btn-primary btn-block">Login</button>
+                <button class="col-sm-3 col-sm-offset-5 btn btn-lg btn-primary ">Login</button>
             </div>
         </form>
-        <a href="/forget" class="forgot-password-link">Forgot password?</a>
-        <p class="login-card-footer-text">Don't have an account? <a href="/register" class="text-reset">Register here</a></p>
-
-        <a href="/campgrounds">Go Back</a>
+        <div class="col-sm-10 col-sm-offset-1">
+            <a href="/forget" class="forgot-password-link">Forgot password?</a>
+            <p class="login-card-footer-text">Don't have an account? <a href="/register" class="text-reset">Register here</a></p>
+            <a href="/campgrounds">Go Back</a>
+        </div>
     </div>
 </div>
 
