--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -1,5 +1,5 @@
 body {
-    background: lightyellow;
+    background: whitesmoke;
 }
 
 .thumbnail img {
@@ -46,6 +46,42 @@ body {
     transform: scale(1.1);
 }
 
+.white-color {
+    color: white;
+}
+
+.card-link {
+    position: relative;
+}
+
 .form-horizontal .control-label{
     text-align:left; 
  }
+
+/* Flaired edges, by Tomas Theunissen */
+
+/* hr.style-seven {
+    overflow: visible; /* For IE */
+    height: 30px;
+    border-style: solid;
+    border-color: black;
+    border-width: 1px 0 0 0;
+    border-radius: 20px;
+}
+hr.style-seven:before { /* Not really supposed to work, but does */
+    display: block;
+    content: "";
+    height: 30px;
+    margin-top: -31px;
+    border-style: solid;
+    border-color: black;
+    border-width: 0 0 1px 0;
+    border-radius: 20px;
+}
+
+hr.style-four {
+    height: 12px;
+    border: 0;
+    box-shadow: inset 0 12px 12px -12px rgba(0, 0, 0, 0.5);
+} */
+
