--- a/views/campground/show.ejs
+++ b/views/campground/show.ejs
@@ -1,5 +1,4 @@
 <% include ../partials/header %>
-<!-- <div class="ui main text container segment"> -->
     <div class="row">
         <div class="col-md-3">
             <p class="lead">
@@ -16,20 +15,26 @@
             </div>
         </div>
         <div class="col-md-9">
-            <div class="thumbnail">
-                <img class="img-responsive" src="<%= campground.Image%>" height="400" width="600" alt="" srcset="">
-                <div class="caption">
-                    <h4 class="pull-left">
-                        <a>
-                            <%= campground.Name %>
-                        </a>
-                    </h4>
-                    <h4 class="pull-right">€ <%= campground.Price %> per night</h4>
+            <div class="card">
+                <img class="img-card-img-top" src="<%= campground.Image%>" height="400" width="600" alt="" srcset="">
+                <div class="card-body">
+                    <div class="card-title">
+                        <h4 class="pull-left">
+                            <a>
+                                <%= campground.Name %>
+                            </a>
+                        </h4>
+                    </div>
+                    <h4 class="text-right">€ <%= campground.Price %> per night</h4>
                     <br>
                     <br>
-                    <p><%= campground.Description %></p>
                     <p>
-                        <em>Submitted by <a href="/users/<%= campground.Author.id %>"> <%= campground.Author.username %></a>, <%= moment(campground.CreatedAt).fromNow() %></em>
+                        <%= campground.Description %>
+                    </p>
+                    <p>
+                        <em>
+                            Submitted by <a href="/users/<%= campground.Author.id %>"> <%= campground.Author.username %></a>, <%= moment(campground.CreatedAt).fromNow() %>
+                        </em>
                     </p>
                     <% if (vCurrentUser && campground.Author.id.equals(vCurrentUser._id) || vCurrentUser && vCurrentUser.vIsAdmin) { %>
                         <a class="btn btn-xs btn-warning" href="/campgrounds/<%= campground._id %>/edit">Edit</a>
@@ -45,29 +50,30 @@
                 </div>
                 <hr>
                     <% campground.comments.forEach(function(comment){ %>
-                    <div class="row">
-                        <div class="col-md-12">
-                            <strong> <%=comment.Author.username %></strong> 
-                            <span class="pull-right">
-                                <%= moment(comment.CreatedAt).fromNow() %>
-                            </span>
-                            <p><%=comment.Text%></p>
-                            <% if (vCurrentUser && comment.Author.id.equals(vCurrentUser._id) || vCurrentUser && vCurrentUser.vIsAdmin) { %>
-                                <a class="btn btn-xs btn-warning" href="/campgrounds/<%= campground._id %>/comments/<%= comment._id %>/edit">Edit</a>
-                                <form class="delete-form" action="/campgrounds/<%= campground._id %>/comments/<%= comment._id %>?_method=DELETE" method="POST">
-                                    <button class="btn btn-xs btn-danger">Delete</button>
-                                </form>
-                            <% } %>
+                        <div class="row">
+                            <div class="col-md-12">
+                                <strong> <%=comment.Author.username %></strong> 
+                                <span class="text-right">
+                                    <%= moment(comment.CreatedAt).fromNow() %>
+                                </span>
+                                <p><%=comment.Text%></p>
+                                <% if (vCurrentUser && comment.Author.id.equals(vCurrentUser._id) || vCurrentUser && vCurrentUser.vIsAdmin) { %>
+                                    <a class="btn btn-xs btn-warning" href="/campgrounds/<%= campground._id %>/comments/<%= comment._id %>/edit">Edit</a>
+                                    <form class="delete-form" action="/campgrounds/<%= campground._id %>/comments/<%= comment._id %>?_method=DELETE" method="POST">
+                                        <button class="btn btn-xs btn-danger">Delete</button>
+                                    </form>
+                                <% } %>
+                            </div>
                         </div>
-                    </div>
+                        <img src="/images/hr1-raypham.gif" alt="">
                     <%});%>
                     <p>
-                        <a class="btn btn-default" href="/campgrounds">Back to campgrounds</a>
+                        <a class="btn btn-primary" href="/campgrounds">Back to campgrounds</a>
                     </p>
             </div>
         </div>
     </div>
-<!-- </div> -->
+
 
 <!-- <script>
     function initMap() {
