--- a/views/comments/new.ejs
+++ b/views/comments/new.ejs
@@ -1,22 +1,22 @@
 <% include ../partials/header %>
-<!-- <div class="container"> -->
-    <div class="row">
-        <h1 style="text-align: center">Add comment to <%= campground.Name %></h1>
-        <br>
-        <div style="width: 30%; margin: 50px auto">
-            <form action="/campgrounds/<%=campground._id%>/comments" method="POST">
-                <div class="form-group">
-                    <input class="form-control" type="text" name="comment[Text]" placeholder="Comment">
-                </div>
-                <!-- <div class="form-group">
-                    <input class="form-control" type="text" name="comment[Author]" placeholder="Author">
-                </div> -->
-                <div class="form-group">
-                    <button class="btn btn-lg btn-default btn-block">Submit!</button>
-                </div>
-                <a href="/campgrounds">Go Back</a>
-            </form>
-        </div>        
-    </div>
-<!-- </div> -->
+
+<div style="width: 50%; margin: 50px auto">
+    <h1 style="text-align: center">Add comment to <%= campground.Name %></h1>
+    <br>
+    <form action="/campgrounds/<%=campground._id%>/comments" method="POST">
+        <div class="form-group row">
+            <label class="col-sm-2 col-sm-offset-2 col-form-label" for="comment">Comment</label>
+            <div class="col-sm-6">    
+                <input id="comment" class="form-control" type="text" name="comment[Text]" placeholder="Comment">
+            </div>
+        </div>
+        <div class="form-group row">
+            <div class="col-sm-4 col-sm-offset-5"> 
+                <button class="btn btn-primary btn-block">Submit!</button>
+            </div>
+        </div>
+        <a href="/campgrounds">Go Back</a>
+    </form>
+</div>
+
 <% include ../partials/footer %>
