--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,23 +1,23 @@
 <% include ./partials/header %>
 
 <div class="row">
-    <h1 style="text-align: center">Login</h1>
     <div style="width: 50%; margin: 10px auto;">
-        <form action="/login" class="form-horizontal" method="post">
-            <div class="form-group">
-                <label class="col-sm-3 col-sm-offset-1 control-label" for="username">Username : </label>
+        <h1 style="text-align: center">Login</h1>
+        <form action="/login" method="post">
+            <div class="form-group row">
+                <label class="col-sm-3 col-sm-offset-1 col-form-label" for="username">Username : </label>
                 <div class="col-sm-6">
                     <input id="username"class="form-control" type="text" name="username" placeholder="username" autofocus>
                 </div>
             </div>
-            <div class="form-group">
-                <label class="col-sm-3 col-sm-offset-1 control-label" for="password">Password : </label>
+            <div class="form-group row">
+                <label class="col-sm-3 col-sm-offset-1 col-form-label" for="password">Password : </label>
                 <div class="col-sm-6">
                     <input id="password" class="form-control" type="password" name="password" placeholder="password">
                 </div>
             </div>
-            <div class="form-group">
-                <button class="col-sm-3 col-sm-offset-5 btn btn-lg btn-primary ">Login</button>
+            <div class="form-group row">
+                <button class="col-sm-3 col-sm-offset-5 btn btn btn-primary">Login</button>
             </div>
         </form>
         <div class="col-sm-10 col-sm-offset-1">
