--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -9,10 +9,11 @@
         <!-- <link rel="stylesheet" href=""> -->
 
         <!-- Bootstrap CSS -->
-        <!-- Not use 4 but 3 , course is styled with Bootstrap 3 -->
-        <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous"> -->
         <!-- Latest compiled and minified CSS -->
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+        <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous"> -->
+        <!-- CSS only -->
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+
         <!-- Font Awesome -->
         <script src="https://kit.fontawesome.com/aeb6f6bd41.js" crossorigin="anonymous"></script>
         <!-- Style sheet-->
@@ -20,56 +21,72 @@
     </head>
     <body>
 
-        <nav class="navbar navbar-default">
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="container">
                 <div class="navbar-header">
-                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+                    <!-- <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
                       <span class="sr-only">Toggle navigation</span>
                       <span class="icon-bar"></span>
                       <span class="icon-bar"></span>
                       <span class="icon-bar"></span>
+                    </button> -->
+                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
                     </button>
         
                     <a class="navbar-brand" href="/"><i class="fas fa-campground"></i> YelpCamp</a>
                 </div>
-                <div id="navbar" class="collapse navbar-collapse">
-                  <ul class="nav navbar-nav">
-                    <li class="<%= typeof page !== 'undefined' && page === 'campgrounds' ? 'active' : '' %>"><a href="/campgrounds"><i class="fas fa-home"></i> Home</a></li>
-                  </ul>
-                  <ul class="nav navbar-nav navbar-right">
-                    <% if (vCurrentUser && notifications) { %>
-                        <li class="<%= typeof page !== 'undefined' && page === 'login' ? 'active' : '' %>">
-                            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Notifications <span class="badge"><%= notifications.length %></span></a>
-                            <ul class="dropdown-menu">
-                                <li>
-                                    <a href="/notifications">View past notifications</a>
-                                </li>
-                                <% notifications.forEach(function(notification) { %>  
-                                    <li>
-                                        <a href="/notifications/<%= notification.id %>">
-                                            <%= notification.username %> created a new campground
-                                        </a>
-                                    </li>
-                                <% }); %>
-                            </ul>
-                        </li>
-                    <% } %>
-                    <% if (vCurrentUser || vCurrentUser && vCurrentUser.vIsAdmin) { %>
-                            <li class="<%= typeof page !== 'undefined' && page === 'login' ? 'active' : '' %>"><a href="/users/<%= vCurrentUser._id %>/edit">Edit profile <i class="fas fa-users"></i></a></li>
-                    <% } %>
-                      <% if(!vCurrentUser){ %>
-                          <li class="<%= typeof page !== 'undefined' && page === 'login' ? 'active' : '' %>"><a href="/login">Login <i class="fa fa-user"></i></a></li>
-                          <li class="<%= typeof page !== 'undefined' && page === 'register' ? 'active' : '' %>"><a href="/register">Sign Up <i class="fa fa-user-plus"></i></a></li>
-                      <% } else { %>
-                          <li><a href="#">Signed In As <%= vCurrentUser.username %></a></li>
-                          <li><a href="/logout">Logout <i class="fas fa-sign-out-alt"></i></a></li>
-                      <% } %>
-                  </ul>
+                <div id="navbarNav" class="collapse navbar-collapse">
+                    <ul class="navbar-nav">
+                        <a class="nav-link <%= typeof page !== 'undefined' && page === 'campgrounds' ? 'active' : '' %>" href="/campgrounds"><i class="fas fa-home"></i> Home <span class="sr-only">(current)</span></a>
+                    </ul>
                 </div>
+                <form class="form-inline">
+                    <div class="input-group">
+                        <ul class="navbar-nav ml-auto">
+                            <% if (vCurrentUser && notifications) { %>
+                                <li class="nav-item dropdown <%= typeof page !== 'undefined' && page === 'login' ? 'active' : '' %>">
+                                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                        Notifications <span class="badge"><%= notifications.length %></span>
+                                    </a>
+                                    <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                                            <a class="dropdown-item" href="/notifications">View past notifications</a>
+                                            <% notifications.forEach(function(notification) { %>  
+                                                <a class="dropdown-item" href="/notifications/<%= notification.id %>">
+                                                    <%= notification.username %> created a new campground
+                                                </a>
+                                            <% }); %>
+                                    </div>
+                                </li>
+                            <% } %>
+                            <% if (vCurrentUser || vCurrentUser && vCurrentUser.vIsAdmin) { %>
+                                <li class="nav-item">
+                                    <a class="nav-link <%= typeof page !== 'undefined' && page === 'login' ? 'active' : '' %>" href="/users/<%= vCurrentUser._id %>/edit">Edit profile <i class="fas fa-users"></i></a>
+                                </li>
+                            <% } %>
+                            <% if(!vCurrentUser){ %>
+                                <li class="nav-item">
+                                    <a class="nav-link <%= typeof page !== 'undefined' && page === 'login' ? 'active' : '' %>" href="/login">Login <i class="fa fa-user"></i></a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link <%= typeof page !== 'undefined' && page === 'register' ? 'active' : '' %>" href="/register">Sign Up <i class="fa fa-user-plus"></i></a>
+                                </li>
+                            <% } else { %>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="#">Signed In As <%= vCurrentUser.username %></a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="/logout">Logout <i class="fas fa-sign-out-alt"></i></a>
+                                </li>
+                            <% } %>
+                        </ul>
+                    </div>
+                </form>
             </div>
         </nav>
 
-        <div class="container">
+
+        <div class="container mt-2 mb-2">
             <% if (error && error.length > 0) { %> 
                 <div class="alert alert-danger" role="alert">
                     <%= error %>
