--- a/views/users/edit.ejs
+++ b/views/users/edit.ejs
@@ -4,64 +4,63 @@
 <% console.log(user) %> -->
 
 
-<div class="row">
-    <div class="register">
-        <h1 style="text-align: center">Edit <%= user.username %></h1>
-    </div>
     <div style="width: 70%; margin: 25px auto;">
-        <form class="form-horizontal" action="/users/<%= user._id %>?_method=PUT" method="POST">
+        <div class="register">
+            <h1 style="text-align: center">Edit <%= user.username %></h1>
+        </div>
+        <form action="/users/<%= user._id %>?_method=PUT" method="POST">
             <br>
-            <div class="form-group register">
-                <label class="col-sm-3 col-sm-offset-1 control-label" for="usernaam">Username : </label>
+            <div class="form-group  row register">
+                <label class="col-sm-3 sm-offset-1 col-form-label" for="usernaam">Username</label>
                 <div class="col-sm-6">
                     <input id="usernaam" type="text" value="<%= user.username %>" name="updUser[username]">
                 </div>
             </div>
-            <div class="form-group register">
-                <label class="col-sm-3 col-sm-offset-1 control-label" for="firstname">Firstname : </label>
+            <div class="form-group  row register">
+                <label class="col-sm-3 sm-offset-1 col-form-label" for="firstname">Firstname</label>
                 <div class="col-sm-6">
                     <input id="firstname"type="text" value="<%= user.vFirstname %>" name="updUser[vFirstname]">
                 </div>
             </div>
-            <div class="form-group register">
-                <label class="col-sm-3 col-sm-offset-1 control-label" for="lastname">Lastname : </label>
+            <div class="form-group  row register">
+                <label class="col-sm-3 sm-offset-1 col-form-label" for="lastname">Lastname</label>
                 <div class="col-sm-6">
                     <input id="lastname"type="text" value="<%= user.vLastname %>" name="updUser[vLastname]">
                 </div>
             </div>
-            <div class="form-group register">
-                <label class="col-sm-3 col-sm-offset-1 control-label" for="geboortedatum">Geboortedatum : </label>
+            <div class="form-group  row register">
+                <label class="col-sm-3 sm-offset-1 col-form-label" for="geboortedatum">Geboortedatum</label>
                 <div class="col-sm-6">
                     <input id="geboortedatum"type="date" value="<%= inpDate %>" name="updUser[vDateBirth]">
                 </div>
             </div>
-            <div class="form-group register">
-                <label class="col-sm-3 col-sm-offset-1 control-label" for="facebook">Facebook url : </label>
+            <div class="form-group  row register">
+                <label class="col-sm-3 sm-offset-1 col-form-label" for="facebook">Facebook url</label>
                 <div class="col-sm-6">
                     <input id="facebook"type="text" value="<%= user.vFacebook %>" name="updUser[vFacebook]">
                 </div>
             </div>
-            <div class="form-group register">
-                <label class="col-sm-3 col-sm-offset-1 control-label" for="twitter">Twitter url : </label>
+            <div class="form-group  row register">
+                <label class="col-sm-3 sm-offset-1 col-form-label" for="twitter">Twitter url</label>
                 <div class="col-sm-6">
                     <input id="twitter"type="text" value="<%= user.vTwitter %>" name="updUser[vTwitter]">
                 </div>
             </div>
-            <div class="form-group register">
-                <label class="col-sm-3 col-sm-offset-1 control-label" for="avatar">Avatar url : </label>
+            <div class="form-group  row register">
+                <label class="col-sm-3 sm-offset-1 col-form-label" for="avatar">Avatar url</label>
                 <div class="col-sm-6">
                     <input id="avatar"type="text" value="<%= user.vAvatar %>" name="updUser[vAvatar]">
                 </div>
             </div>
-            <div class="form-group register">
-                <label class="col-sm-3 col-sm-offset-1 control-label" for="email">Email address : </label>
+            <div class="form-group  row register">
+                <label class="col-sm-3 sm-offset-1 col-form-label" for="email">Email address</label>
                 <div class="col-sm-6">
                     <input id="email" type="text" value="<%= user.vEmail %>" name="updUser[vEmail]">
                 </div>
             </div>
-            <div class="form-group">
+            <div class="form-group row ">
                 <% if (vCurrentUser && vCurrentUser.vIsAdmin) { %>
-                    <label class="col-sm-3 col-sm-offset-1 control-label" for="isAdmin">Is This an Admin? : </label>
+                    <label class="col-sm-3 sm-offset-1 col-form-label" for="isAdmin">Is This an Admin?</label>
                     <div class="col-sm-6">                        
                         <% if (user.vIsAdmin) { %>
                             <input id="isAdmin" type="checkbox" value="<%= user.vIsAdmin %>" name="updUser[vIsAdmin]" value="Yes" checked="checked">
@@ -71,14 +70,13 @@
                     </div>
                 <% } %>
             </div>
-            <div class="form-group">
-                <div class="col-sm-6 col-sm-offset-1 control-label">
-                    <button class="btn btn-lg btn-default btn-block">Submit!</button>
+            <div class="form-group row">
+                <div class="col-sm-6 sm-offset-1 col-form-label">
+                    <button class="btn btn-primary btn-block">Submit!</button>
                     <a href="/campgrounds">Go Back</a>
                 </div>
             </div>
         </form>
     </div>
-</div>
 
 <% include ../partials/footer %>
